--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <img width="800" height="800" src="https://sun9-47.userapi.com/impg/jeuOltAjxPOkILr15JLE4aOw6tfDS4cqCdkTEg/FV2Utz2hzhw.jpg?size=900x900&quality=96&proxy=1&sign=4f3e7bd9eb63ec064ca2d3b24126a431&type=album"/>
+  <img width="100%" height="100%" src="https://sun9-47.userapi.com/impg/jeuOltAjxPOkILr15JLE4aOw6tfDS4cqCdkTEg/FV2Utz2hzhw.jpg?size=900x900&quality=96&proxy=1&sign=4f3e7bd9eb63ec064ca2d3b24126a431&type=album"/>
 
 
 </body>
