--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>КУДА ПРЕШЬ ВИДИШ УЗБЭК ВЫЖИВАЕТ БЛЯ БУДУ</title>
 </head>
 
-<body>
+<body style="margin: 0;">
 
   <img width="100%" height="100%" src="https://sun9-47.userapi.com/impg/jeuOltAjxPOkILr15JLE4aOw6tfDS4cqCdkTEg/FV2Utz2hzhw.jpg?size=900x900&quality=96&proxy=1&sign=4f3e7bd9eb63ec064ca2d3b24126a431&type=album"/>
 
