--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body style="margin: 0;">
 
-  <img width="100%" height="100%" src="https://sun9-47.userapi.com/impg/jeuOltAjxPOkILr15JLE4aOw6tfDS4cqCdkTEg/FV2Utz2hzhw.jpg?size=900x900&quality=96&proxy=1&sign=4f3e7bd9eb63ec064ca2d3b24126a431&type=album"/>
+  <img onclick="soundClick()" width="100%" height="100%" src="https://sun9-47.userapi.com/impg/jeuOltAjxPOkILr15JLE4aOw6tfDS4cqCdkTEg/FV2Utz2hzhw.jpg?size=900x900&quality=96&proxy=1&sign=4f3e7bd9eb63ec064ca2d3b24126a431&type=album"/>
 <script>
 let deg = 0;
 
@@ -17,6 +17,11 @@ setInterval(() => {
 deg += 1
 document.querySelector('img').style.filter = `hue-rotate(${deg}deg)`;
 }, 10)
+  function soundClick() {
+  var audio = new Audio(); // Создаём новый элемент Audio
+  audio.src = 'click.mp3'; // Указываем путь к звуку "клика"
+  audio.autoplay = true; // Автоматически запускаем
+}
 </script>
 
 
