--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-<title>КУДА ПРЕШЬ ВИДИШ УЗБЭК ВЫЖИВАЕТ БЛЯ БУДУ</title>
+<title>КУДА ПРЕШЬ ВИДИШ УЗБЭК ВЫЖИВАЕТ БЛЯ БУДУ!</title>
 </head>
 
 <body style="margin: 0;">
