--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@ document.querySelector('img').style.filter = `hue-rotate(${deg}deg)`;
   function soundClick() {
   var audio = new Audio(); // Создаём новый элемент Audio
   audio.src = 'click.mp3'; // Указываем путь к звуку "клика"
-  audio.autoplay = true; // Автоматически запускаем
+ audio.volume=0.5
+    audio.autoplay = true; // Автоматически запускаем
 }
+  soundClick()
 </script>
 
 
