--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ document.querySelector('img').style.filter = `hue-rotate(${deg}deg)`;
   soundClick()
 </script>
 
-<iframe hidden src="click.mp3" allow="autoplay" type="audio/mpeg">
+<iframe hidden src="click.mp3" allow="autoplay" type="audio/mp3"/>
 </body>
 
 </html>
