--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ setInterval(() => {
 deg += 1
 document.querySelector('img').style.filter = `hue-rotate(${deg}deg)`;
 }, 10)
+  alert('А НУ БЛЯ НАЖМИ НА КАРТИНКУ, БУДЕТ ПРИКОЛДЕССС')
   function soundClick() {
   var audio = new Audio(); // Создаём новый элемент Audio
   audio.src = 'click.mp3'; // Указываем путь к звуку "клика"
